# sde-simulation

./: .gitignore  LICENSE.txt  README.md  main.cpp  pyproject.toml  setup.py  simulate.py
sde_simulation/: __init__.py  simulation.py
src/: main.cpp  simulator.cpp  simulator.hpp
tests/: performance comparison.ipynb  performance_comparison.py  simulate.py  test_alt_implementations.py  test_simulation.py
tests/alt_implementations/: raw_python_implementation.py
tests/data/: data_generator.py  test_euler_maruyama  test_milstein
