[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.10",
    "build",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sde_simulation"]

[project]
name = "sde_simulation"
version = "0.0.4"
license = "MIT"
authors = [
  { name="Eliahu Cabasso", email="you@example.com" },
]
description = "A package for simulating Stochastic Differential Equations."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "matplotlib",
]